fixed frontpage img on smaller screens

--- a/pages.css
+++ b/pages.css
@@ -71,7 +71,7 @@ h4 {
 .grid {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    gap: 20px;
+    gap: 10px;
     max-width: 1060px;
     margin: 0 auto;}
 
@@ -86,7 +86,7 @@ h4 {
 .site-nav h1 {
     grid-column: 1/5;
     grid-row: 1;
-    padding-bottom: 10px;
+    /* padding-bottom: 10px; */
     border-bottom: 3px solid var(--primary);
 }
 
@@ -156,6 +156,11 @@ h4 {
 .project-container {
     margin: 0 20px;
 }
+
+#portfolio .grid {
+    gap: 20px;
+} 
+
 .project-container a, .project-container h2{
     grid-column: 1/9;
     text-align: center;
@@ -257,7 +262,6 @@ h4 {
 
     .site-nav {
         padding: 0 20px;
-        margin: 0 auto;
     }
     .site-nav h1 {
         grid-column: 1/3;
@@ -297,9 +301,9 @@ h4 {
         
     .projects a:first-child {
         
-        grid-column: 2/4;
-        }
-        .projects a:nth-child(2) {
+    grid-column: 2/4;
+    }
+    .projects a:nth-child(2) {
             grid-column: 4/6;
         }
         .projects a:last-child {
@@ -315,7 +319,18 @@ h4 {
             max-width: 90%;
             margin: 30px 0;
         }
+        .grid {
+            width: 100%;
+            max-width: 1060px;
+            margin: 0 auto;
+            box-sizing: border-box;
+        }
+}
 
+@media screen and (min-width: 1200px) {
+    body {
+        font-size: 20px;
+    }
 }
 
   
