--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,7 @@ h4 {
     grid-template-columns: repeat(8, 1fr);
     gap: 10px;
 }
+
 .site-nav {
     margin: 0 20px;
 }
@@ -175,20 +176,25 @@ h4 {
 
 
 #welcome {
-    padding: 0 0 20px 20px;
+    padding: 0 20px 20px 20px;
 }
 
 .welcome-text {
-    grid-column: 1/5;
+    grid-column: 1/9;
+    order: 2;
+    text-align: center;
 }
 
 .welcome-img {
-    grid-column: 5/9;
-    overflow-x: hidden;
+    grid-column: 1/9;
+    /* overflow-x: hidden; */
+    order: 1;
+    max-width: 350px;
+    margin: 0 auto;
 }
 
 .welcome-img > img {
-    width: 150%;
+    width: 100%;
     /* border: 5px solid var(--primary); */
     /* background-color: #dddbff; */
 }
@@ -202,7 +208,7 @@ h4 {
 }
 
 #portfolio {
-    background-color: #1a1e2a;
+    background-color: var(--secondary);
     /* background-image: linear-gradient(to bottom right, #1a1e2a, #12151e); */
 
     padding: 30px 20px;
@@ -256,6 +262,10 @@ h4 {
     list-style-type: none;
 }
 
+#contact .leading {
+    text-align: center;
+}
+
 #skills img {
     height: 80px;
     margin: 10px auto;
@@ -297,7 +307,7 @@ align-items: center;}
 
 footer {
     padding: 30px 20px;
-    background-color: #212738;
+    /* background-color: #212738; */
     background-size: 40%;
     background-repeat: no-repeat;
     background-position: top center;
@@ -327,7 +337,10 @@ footer img {
 @media screen and (min-width: 620px) {
     .welcome-text {
         grid-column: 1/5;
+        order: 1;
+        text-align: left;
     }
+   
     .welcome-img {
         grid-column: 5/9;
     }
@@ -335,6 +348,11 @@ footer img {
     .welcome-img img {
         width: 100%;
         padding-bottom: 40px;
+    }
+
+    .welcome-img {
+        max-width: 700px;
+
     }
 
     .projects {
@@ -472,7 +490,7 @@ footer img {
     .links {
         grid-column: span 4;
     margin: 0 auto;
-    text-align: center;}
+    text-align: left;}
 
     .links li {
         padding-bottom: 10px;
